close more todos

--- a/journal/202107.md
+++ b/journal/202107.md
@@ -4,11 +4,12 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-{ intro, major news of the month, don't put any links here
+{ intro ideas, pick 3-5 that make most sense:
 
 - 3 consensus changes on the horizon
 - maybe Dev progress: dcrd optimizations, DCRDEX ETH integration, maybe godcr mass cleanup
 - new marketing props?
+- one consensus change made some press and podcast mentions
 - maybe - a batch of new interviews
 
 }
@@ -214,8 +215,6 @@ Other:
 
 Welcome to new first time contributors with code merged to master: @briancolecoinmetrics ([dcrd](https://github.com/decred/dcrd/commits?author=briancolecoinmetrics)), @devchoplife ([godcr](https://github.com/planetdecred/godcr/commits?author=devchoplife)), and @jcezetah ([godcr](https://github.com/planetdecred/godcr/commits?author=jcezetah))!
 
-Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
-
 Check out new interviews with community members @fst\_nml, Dominic Frisby and Notsofast in the [Media](#media) section.
 
 Community stats as of Aug 1:
@@ -223,18 +222,16 @@ Community stats as of Aug 1:
 - [Twitter](https://twitter.com/decredproject) followers: 47,586 (+667)
 - [Reddit](https://www.reddit.com/r/decred/) subscribers: 11,449 (+127)
 - [Matrix](https://chat.decred.org/) #general users: 513 (+12)
-- [Discord](https://discord.gg/GJ2GXfz) users: {} (+{})
+- [Discord](https://discord.gg/GJ2GXfz) users: 1,960 (+27)
 - [Telegram](https://t.me/Decred) users: 2,833 (+100)
 - [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,600 (+30), views: 191K (+3K)
-
-{ notable SM activity }
 
 
 ## Governance
 
 In July the new [treasury](https://dcrdata.decred.org/treasury) received 11,338 DCR worth $1.44M at July's average rate of $127.48. 770 DCR was spent to pay contractors, worth $98K at July's rate, or $101K at June's billing rate of $131.52. As of Aug 2, the combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and new treasury is 703,655 DCR (96.3 million USD at $136.80).
 
-{ check the legacy treasury for any activity rr: there are some bits of DCR arriving at it, including what look like outputs from votes... quite [strange](https://explorer.dcrdata.org/tx/2411c14283d5810e0d7f6d1f174e42cb4cf536fb2f7dd51b96d63c9087766e10/in/13)}
+The legacy treasury received an unusual ["donation"](https://explorer.dcrdata.org/tx/2411c14283d5810e0d7f6d1f174e42cb4cf536fb2f7dd51b96d63c9087766e10) of ~90 DCR coming out of a mix transaction.
 
 There were 4 new proposals published in July, and three are still under discussion at time of writing. { update needed? }
 
