--- a/journal/202107.md
+++ b/journal/202107.md
@@ -143,7 +143,7 @@ Work started to replace the registration fee with [fidelity bonds](https://githu
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
-@raedah commented on the question when staking will be supported in the mobile apps:
+@raedah commented on the question of when staking will be supported in the mobile apps:
 
 > Support for new style vspd staking has been built into dcrlibwallet for godcr and is currently in final testing. After godcr is released, it will be easy for the devs to import the same staking functionality into the mobile applications. There is not a strong incentive to prioritize building the mobile staking UI though until there is a functional hardware wallet that it can be paired with. ([2021-07-19](https://www.reddit.com/r/decred/comments/okrlg1/mobile_staking/h5rps6h/))
 
@@ -233,7 +233,7 @@ In July the new [treasury](https://dcrdata.decred.org/treasury) received 11,338 
 
 The legacy treasury received an unusual ["donation"](https://explorer.dcrdata.org/tx/2411c14283d5810e0d7f6d1f174e42cb4cf536fb2f7dd51b96d63c9087766e10) of ~90 DCR coming out of a mix transaction.
 
-There were 4 new proposals published in July, and three are still under discussion at time of writing. { update needed? }
+There were 4 new proposals published in July, and two are still under discussion at time of writing. 
 
 - A [proposal](https://proposals.decred.org/record/ae609f1) from @frizzers to make a copyleft documentary film that can be freely shared, based on his book "Daylight Robbery", at a cost of $300K.
 
@@ -252,13 +252,13 @@ See Politeia Digest [issue 44](https://blockcommons.red/politeia-digest/issue044
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Aug 1: Poolin 58%, F2Pool 23%, AntPool 6%, BTC.com 4%, Easy2Mine 4%, Luxor 2.3%, HuobiPool 1%, ViaBTC 0.4%, CoinMine 0.09%, OKEx 0.08%, UUPool 0.06%. Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before Aug 1 closely matched the reported hashrate.
 
-Hashrate is recovering from June's [events](https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere) in China and new mining pools join the network.
+Hashrate is recovering from June's [events](https://www.coindesk.com/chinas-bitcoin-mining-crackdown-is-a-boon-for-miners-elsewhere) in China and new mining pools are joining the network.
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=kqhwurpw-kru2wj65&bin=window&axis=time&visibility=true-true&mode=stepped) varied between 146.3-203.2 DCR, with 30-day [average](https://dcrstats.com/) at 190.7 DCR (+6).
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=kqhwurpw-kru2wj65&scale=linear&bin=block&axis=time) was 7.43-7.88 million DCR, meaning that 56.3-59.8% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=kqhwurpw-kru2wj65&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-Ticket price had an unusual drop below 2020 lows but then quickly recovered with a strong buy support.
+Ticket price had an unusual drop below 2020 lows but then quickly recovered with strong buy support.
 
 **VSP**: On Aug 1, ~8,600 (+600) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and ~400 (-200) by listed legacy dcrstakepool servers. Collectively the 11 legacy and 14 new VSPs managed 22.9% (+2%) of the ticket pool. Unlisted but still active legacy VSPs managed 12 live tickets (-14).
 
@@ -295,7 +295,7 @@ Join our [#services](https://chat.decred.org/#/room/#services:decred.org) chat t
 ## Outreach
 
 Monde PR's achievements for July:
- 
+
 - pitched 1 story to finance and crypto publications
 - pitched Decred to 4 PR opportunities 
 - secured 2 media interviews
@@ -316,9 +316,9 @@ Secured the following news articles:
 
 Attended:
 
-- Jul 5 - [Talent Land Digital](https://github.com/decredcommunity/events/pull/95) - Internet. @pablito gave a 25 min keynote on "What is Decred" (34K views) and a 58 min workshop "Blockchain introduction using dcrdata API" (47K views). Decred is a Bronze sponsor of Talend Land.
+- Jul 5 - [Talent Land Digital](https://github.com/decredcommunity/events/pull/95) - Internet. @pablito gave a 25 min keynote on "What is Decred" (34K views) and a 58 min workshop "Blockchain introduction using dcrdata API" (47K views). Decred is a Bronze sponsor of Talent Land.
 
-- Jul 10 - [YOUCATHON: Youth For Change & Action (100 % Digital)](https://decredcommunity.github.io/events/index/20210710.1) - Youssoufia, Morocco. Computer science school YouCode organized a hackathon between two campuses in Youssoufia and Safi, connected over a video conference. @arij was invited to talk about blockchain technology. In her ~80 min talk she explained the tech and demonstrated Decred wallet and Politeia. Questions concerned how this can be used to build application and what opportunities exist to work in blockchain projects, so @arij explained her role in Decred and how to join.
+- Jul 10 - [YOUCATHON: Youth For Change & Action (100 % Digital)](https://decredcommunity.github.io/events/index/20210710.1) - Youssoufia, Morocco. Computer science school YouCode organized a hackathon between two campuses in Youssoufia and Safi, connected over a video conference. @arij was invited to talk about blockchain technology. In her ~80 min talk she explained the tech and demonstrated a Decred wallet and Politeia. Questions concerned how this can be used to build applications and what opportunities exist to work in blockchain projects, so @arij explained her role in Decred and how to join.
 
 - Since early 2021 Decred is a supporter of the [education program](https://twitter.com/IECarballo/status/1417491314191519751) about cryptocurrency and blockchain tech organized by the Business School of the Catholic University of Argentina and Bitcoin Argentina NGO.
 
@@ -328,10 +328,6 @@ Attended:
 Selected articles:
 
 - The coming rise and fall of central bank digital currencies by @ammarooni ([bitcoinmagazine.com](https://bitcoinmagazine.com/culture/rise-fall-central-bank-digital-currency))
-- Decred, a virtual currency focused on security and scalability, to enhance user experience by Omar Faridi ([crowdfundinsider.com](https://www.crowdfundinsider.com/2021/07/178473-decred-dcr-a-virtual-currency-focused-on-security-and-scalability-to-enhance-user-experience/))
-- No contentious hard forks as Decred evolves by Meredith Loughran ([geekinsider.com](https://geekinsider.com/no-contentious-hardforks-as-decred-evolves/))
-
-{ bee: the last two are quite short press releases also mentioned in Outreach, I think to remove them from here }
 
 Videos:
 
@@ -369,7 +365,7 @@ Selected Reddit posts:
 
 Selected Twitter discussions:
 
-- @lukebp's [thread](https://twitter.com/lukebp_/status/1418216538193203200) on automatic ticket revocations consensus change highlights that more work on mission-critical consensus code being done by developes outside of the original team is an important step in decentralizing the project. Second highlight is this change demonstrates Decred's fundamental value proposition - ability to improve base layer UX.
+- @lukebp's [thread](https://twitter.com/lukebp_/status/1418216538193203200) on the automatic ticket revocations consensus change highlights that more work on mission-critical consensus code being done by developers outside of the original team is an important step in decentralizing the project. Second highlight is this change demonstrates Decred's fundamental value proposition - ability to improve base layer UX.
 - @decredmemelord has [summarized](https://twitter.com/decredmemelord/status/1420227949970685956) some of the project's key achievements in the past year
 
 
