clean intro, up credits

--- a/journal/202107.md
+++ b/journal/202107.md
@@ -4,13 +4,11 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-{ intro ideas, pick 3-5 that make most sense:
+Highlights for July:
 
 - There are now 3 consensus changes in various stages of development, and the ticket revocations one is already attracting some press coverage.
 - Solid progress on all of the usual repositories - dcrd took another 10% off initial blockchain download, and DCRDEX has added core ETH integration.
 - It has been a big month for interviews, with Decred in Depth recording episodes with a number of well known community members, and some other publications and podcasts featuring interviews with project developers.
-
-}
 
 Contents:
 
@@ -391,7 +389,7 @@ Most information from third parties is relayed directly from source after a mini
 
 Credits (alphabetical order):
 
-- writing and editing: bee, degeri, richardred
-- reviews and feedback: davecgh, lukebp, raedah
+- writing and editing: bee, degeri, l1ndseymm, richardred
+- reviews and feedback: davecgh, karamble, lukebp, raedah
 - title image: {}
 - funding: Decred stakeholders
