use additional images

--- a/journal/202107.md
+++ b/journal/202107.md
@@ -74,6 +74,10 @@ Internal:
 - automated tests for [Transaction](https://github.com/decred/decrediton/pull/3518) page
 - removed the use of [winston](https://github.com/decred/decrediton/pull/3536) logging library to reduce the project's dependency tree (and supply chain attack surface)
 
+![updated Decrediton LN page](../img/202107.2.559.png)
+
+_Updated Decrediton LN setup page_
+
 <a id="politeia" />
 
 **[Politeia](https://github.com/decred/politeia)**
@@ -161,6 +165,10 @@ Work started to replace the registration fee with [fidelity bonds](https://githu
 - pages and modals grouped into [packages](https://github.com/planetdecred/godcr/pull/512)
 - 6+ bug fixes
 
+![updated Decrediton LN page](../img/202107.3.620.png)
+
+_godcr Overview page_
+
 <a id="dcrdata" />
 
 **[dcrdata](https://github.com/decred/dcrdata)**
@@ -200,6 +208,10 @@ Internal and developer:
 **[WooCommerce Plugin](https://github.com/karamble/decred-woocommerce-plugin)**
 
 @karamble released a new plugin for accepting DCR payments in [WooCommerce](https://en.wikipedia.org/wiki/WooCommerce) shops. It can generate payment addresses using the wallet account's XPUB (extended public key). This way each payment uses a new unique address while the shop's web server has no access to the wallet.
+
+![WooCommerce plugin checkout](../img/202107.4.586.png)
+
+_WooCommerce plugin checkout page_
 
 Other:
 
