lint and drop draft

--- a/journal/202107.md
+++ b/journal/202107.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – July 2021
+# Decred Journal – July 2021
 
 ![abstract art by @saender](../img/202107.1.github.png)
 
@@ -241,7 +241,7 @@ In July the new [treasury](https://dcrdata.decred.org/treasury) received 11,338 
 
 The legacy treasury received an unusual ["donation"](https://explorer.dcrdata.org/tx/2411c14283d5810e0d7f6d1f174e42cb4cf536fb2f7dd51b96d63c9087766e10) of ~90 DCR coming out of a mix transaction.
 
-There were 4 new proposals published in July, and two are still under discussion at time of writing. 
+There were 4 new proposals published in July, and two are still under discussion at time of writing.
 
 - A [proposal](https://proposals.decred.org/record/ae609f1) from @frizzers to make a copyleft documentary film that can be freely shared, based on his book "Daylight Robbery", at a cost of $300K.
 
@@ -305,7 +305,7 @@ Join our [#services](https://chat.decred.org/#/room/#services:decred.org) chat t
 Monde PR's achievements for July:
 
 - pitched 1 story to finance and crypto publications
-- pitched Decred to 4 PR opportunities 
+- pitched Decred to 4 PR opportunities
 - secured 2 media interviews
 
 Secured the following news articles:
