--- a/journal/202108.md
+++ b/journal/202108.md
@@ -31,7 +31,21 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 **[dcrd](https://github.com/decred/dcrd)**
 
-- {}
+Code implementing the [DCP0007](https://github.com/decred/dcps/blob/master/dcp-0007/dcp-0007.mediawiki) consensus change has been [merged](https://github.com/decred/dcrd/pull/2680) (after some [preparations](https://github.com/decred/dcrd/pull/2679) to make the actual change easier to review). With this change, treasury spend limit will be based on its historical income and not expense, which in turn unlocks the ability to use the new decentralized treasury.
+
+Merged work towards the [Automatic Ticket Revocations](https://proposals.decred.org/record/e2d7b7d) consensus change:
+
+- added a method to get all tickets that [will expire](https://github.com/decred/dcrd/pull/2701) in the next block
+- unified vote and revocation [validation](https://github.com/decred/dcrd/pull/2702)
+- added a function to create [revocation](https://github.com/decred/dcrd/pull/2707) tx for a given ticket
+
+Other merged work:
+
+- optimized [precomputed](https://github.com/decred/dcrd/pull/2690) math values for ~10% faster signature verification and ~400 KiB smaller `dcrd` binary
+- rewritten [NAF conversion](https://github.com/decred/dcrd/pull/2695) to avoid all heap allocations and switch to a faster algorithm, removing another ~1% from signature verification time { mention memory usage changes? }
+- added methods to create and restore [snapshots](https://github.com/decred/dcrd/pull/2715) of spendable coinbase outputs (will allow more efficient tests)
+- added config option for maximum [log file](https://github.com/decred/dcrd/pull/2711) size before it is rotated and compressed
+
 
 <a id="dcrwallet" />
 
@@ -283,7 +297,7 @@ Upcoming:
 
 Selected articles:
 
-- {}
+- https://www.businessinsider.com/profitable-crypto-to-mine-according-to-ceo-mining-farm-navier-2021-8
 
 Videos:
 
