add governance treasury numbers

--- a/journal/202108.md
+++ b/journal/202108.md
@@ -244,7 +244,7 @@ Community stats as of {date}:
 
 ## Governance
 
-In August the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at August's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at August's rate, or ${} at July's billing rate of ${}. As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and new treasury is {n} DCR ({n} million USD at ${n.nn}).
+In August the new [treasury](https://dcrdata.decred.org/treasury) received 10,942 DCR worth $1.76M at August's average rate of $161.24. 845 DCR was spent to pay contractors, worth $136K at August's rate, or $108K at July's billing rate of $127.48. As of Sep 2, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and new treasury is 713,371 DCR (129 million USD at $187.50).
 
 { check the legacy treasury for any activity }
 
