--- a/journal/202108.md
+++ b/journal/202108.md
@@ -60,17 +60,14 @@ Other merged work:
 - fixed some [hangs](https://github.com/decred/dcrwallet/pull/2081) when locking or shutting down the wallet
 - fixed and improved [reorg handling](https://github.com/decred/dcrwallet/pull/2084) in SPV syncing mode
 
-<a id="dcrctl" />
-
-**[dcrctl](https://github.com/decred/dcrctl)**
-
-- {}
-
 <a id="decrediton" />
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
-- {}
+- added a button to [revoke](https://github.com/decred/decrediton/pull/3506) tickets while in SPV mode
+- replaced the gap limit setting with a [Discover Address Usage](https://github.com/decred/decrediton/pull/3532) one-time action with its own gap limit
+- new UI design for [LN Send](https://github.com/decred/decrediton/pull/3538) page
+- new UI design for [LN Receive](https://github.com/decred/decrediton/pull/3537) page
 
 <a id="politeia" />
 
