--- a/journal/202108.md
+++ b/journal/202108.md
@@ -4,7 +4,10 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-{ intro, major news of the month, don't put any links here }
+{ intro, major news of the month, don't put any links here
+
+- Pi v1.1.0
+}
 
 Contents: { sync }
 
@@ -69,11 +72,39 @@ Other merged work:
 - new UI design for [LN Send](https://github.com/decred/decrediton/pull/3538) page
 - new UI design for [LN Receive](https://github.com/decred/decrediton/pull/3537) page
 
+{ UI shot maybe }
+
 <a id="politeia" />
 
 **[Politeia](https://github.com/decred/politeia)**
 
-- {}
+Politeia v1.1.0 has been released and deployed at [proposals.decred.org](https://proposals.decred.org/). Release highlights:
+
+- proposal authors are now required to fill funding amount, start and end dates, and the domain when submitting proposals (recent proposals like [this](https://proposals.decred.org/record/58d9f46) show this new data at the top)
+- [combined](https://github.com/decred/politeiagui/pull/2431) `In Discussion` and `Voting` tabs into one `Under Review` tab to help users quickly see if any proposals are being voted on
+- ability to see raw Markdown
+- ability to see who censored the proposal and why
+- many UI/UX fixes and improvements
+- email notifications are now rate limited to prevent malicious users from triggering too many of them and getting Politeia server flagged as a source of spam
+- user database moved to MySQL which allows to remove CockroachDB as a dependency and have only one database instance to manage
+
+For more details check the release notes in [politeia](https://github.com/decred/politeia/releases/tag/v1.1.0) and [politeiagui](https://github.com/decred/politeiagui/releases/tag/v1.1.0) repositories.
+
+User-facing changes merged in master (post v1.1.0):
+
+- allow user to [compare](https://github.com/decred/politeiagui/pull/2524) any two proposal versions
+- highlight comment [votes](https://github.com/decred/politeiagui/pull/2520) immediately but show an error if server request failed
+- ~7 bug fixes
+
+Backend, internal, and command-line changes merged:
+
+- verify [password](https://github.com/decred/politeia/pull/1490) before expensive wallet operations in `politeiavoter vote` command
+- human-readable [currency](https://github.com/decred/politeia/pull/1488) values in `pictl` tool output (e.g. when submitting new proposals with it)
+- added CSRF protection to the [login](https://github.com/decred/politeia/pull/1481) route
+- added [billing statuses](https://github.com/decred/politeia/pull/1480) (Active, Closed, Completed) to mark whether an approved proposal can or cannot be billed against
+- require the [extra data](https://github.com/decred/politeia/pull/1487) fields to be signed when posting or editing comments, and only allow that data if configured in the comments plugin (the purpose of these fields is to extend the comments plugin with new functionality)
+- allow proposal authors to post [updates](https://github.com/decred/politeia/pull/1491) on approved proposals. Each update starts a new comment thread where users can reply and vote, until an admin marks the proposal as either Completed or Closed.
+- increased test coverage
 
 <a id="vspd" />
 
