--- a/journal/202108.md
+++ b/journal/202108.md
@@ -117,7 +117,9 @@ Backend, internal, and command-line changes merged:
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
-- {}
+- updated to [latest](https://github.com/decred/dcrlnd/pull/138) dcrd and dcrwallet
+- added a [script](https://github.com/decred/dcrlnd/pull/139) to build a simulation network for testing
+- added [SPV support](https://github.com/decred/dcrlnd/pull/140) in embedded wallet mode
 
 <a id="cspp" />
 
