--- a/journal/202108.md
+++ b/journal/202108.md
@@ -176,7 +176,8 @@ Some changes have been backported to the [v0.2.x](https://github.com/decred/dcrd
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
-- {}
+- migrated to the new [Politeia API](https://github.com/decred/dcrdata/pull/1829)
+- dependency upgrades and refactoring in preparation to release v6.0 branch
 
 <a id="tinydecred" />
 
@@ -389,6 +390,8 @@ In August DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. T
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
 { dcrdex updates, esp. volume }
+
+https://www.reddit.com/r/decred/comments/pggfku/weekly_trader_talk_thursday/hbb16ki/
 
 
 ## Relevant External
