--- a/journal/202108.md
+++ b/journal/202108.md
@@ -72,7 +72,7 @@ Other merged work:
 - new UI design for [LN Send](https://github.com/decred/decrediton/pull/3538) page
 - new UI design for [LN Receive](https://github.com/decred/decrediton/pull/3537) page
 
-{ UI shot maybe }
+{ UI shot candidates: 3537..3538 }
 
 <a id="politeia" />
 
@@ -95,6 +95,8 @@ User-facing changes merged in master (post v1.1.0):
 - allow user to [compare](https://github.com/decred/politeiagui/pull/2524) any two proposal versions
 - highlight comment [votes](https://github.com/decred/politeiagui/pull/2520) immediately but show an error if server request failed
 - ~7 bug fixes
+
+{ check again if there are any UI shot candidates }
 
 Backend, internal, and command-line changes merged:
 
@@ -134,7 +136,7 @@ User-facing:
 - allow clients to [cancel](https://github.com/decred/dcrdex/pull/1133) orders while a market is suspended
 - fixed [scrolling](https://github.com/decred/dcrdex/pull/1142) issues
 
-{ UI shot candidates: 1135 }
+{ UI shot candidates: 1135; (but check one more time) }
 
 Internal:
 
@@ -183,7 +185,19 @@ Merged in dcrandroid:
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- {}
+- implemented [Politeia](https://github.com/planetdecred/godcr/pull/542) voting
+- more informative display of [transactions](https://github.com/planetdecred/godcr/pull/582) lists and details
+- added desktop [notifications](https://github.com/planetdecred/godcr/pull/518) when a new receiving transaction or proposal is detected
+- new system for in-app (toast) and operating system [notifications](https://github.com/planetdecred/godcr/pull/540)
+- show time till next [ticket price](https://github.com/planetdecred/godcr/pull/565) change
+- customized notifications for [stake](https://github.com/planetdecred/godcr/pull/560) tx
+- implemented [back](https://github.com/planetdecred/godcr/pull/557) navigation
+- added [hover](https://github.com/planetdecred/godcr/pull/488) tooltips for ticket data
+- added [LinearLayout](https://github.com/planetdecred/godcr/pull/563) to simplify layout code
+- refactoring and code reuse { 547 536 577 }
+- ~20 bug fixes { 3x545 2x577 2x559 2x582 }
+
+{ UI shot candidates: 542,582 }
 
 <a id="dcrdata" />
 
