--- a/journal/202108.md
+++ b/journal/202108.md
@@ -206,23 +206,9 @@ Merged in dcrandroid:
 - migrated to the new [Politeia API](https://github.com/decred/dcrdata/pull/1829)
 - dependency upgrades and refactoring in preparation to release v6.0 branch
 
-<a id="dcrweb" />
-
-**[decred.org](https://github.com/decred/dcrweb)**
-
-- {}
-
-{ check other repos in:
-
-- https://github.com/decred
-- https://github.com/planetdecred
-- https://github.com/raedahgroup
-
-}
-
 Other:
 
-- { smaller items go here }
+- Bug Bounty Program posted an [update](https://bounty.decred.org/2021/08/status-update/): two vulnerabilities have been patched and made public, their authors added to the Hall of Fame.
 
 
 ## People
