--- a/journal/202108.md
+++ b/journal/202108.md
@@ -390,11 +390,13 @@ Selected Twitter discussions:
 
 ## Markets
 
-In August DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
+In August DCR was trading between USD 126.5-181.26 / BTC 0.003208-0.003807. The average daily rate was $161.24.
 
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
 
 { dcrdex updates, esp. volume }
+
+Dcrdata now lists [trading](https://explorer.dcrdata.org/market?chart=candlestick&xc=dcrdex&bin=1h) and [volume](https://explorer.dcrdata.org/market?chart=depth&xc=dcrdex&bin=1h) data for the BTC/DCR pair in the DCRDEX.
 
 https://www.reddit.com/r/decred/comments/pggfku/weekly_trader_talk_thursday/hbb16ki/
 
