--- a/journal/202108.md
+++ b/journal/202108.md
@@ -422,9 +422,7 @@ Some U.S. lawmakers got surprisingly selective about consensus algorithms and on
 
 { stablecoins at risk? https://twitter.com/lukebp_/status/1422549683025678350 }
 
-A16Z, a VC with stakes in many crypto networks, has [published](https://a16z.com/2021/08/26/open-sourcing-our-token-delegate-program/) its "Token Delegate Program", explaining why and how they delegate their (substantial) voting rights in the various projects they have invested in. Around half of their stake seems to be delegated to various University-based organizations, with the rest being delegated to startups and non-profits. 
-
-A Uniswap proposal from Flipside crypto caused some [controversy](https://twitter.com/DuneAnalytics/status/1428250340139356164) in the community as it breezed through early rounds of voting, it would have used $25M worth of UNI to generate yield that paid the Flipside team to produce "community-enabled analytics". One of the issues raised was that the entities named to oversee the grant included people who would benefit from it. All of the other providers of analytics were unimpressed by the attempt to get UNI top fund 8 full time employees for Flipside.
+A16Z, a VC with stakes in many crypto networks, has [published](https://a16z.com/2021/08/26/open-sourcing-our-token-delegate-program/) its "Token Delegate Program". The document explains why A16Z has decided to delegate its voting rights (they hold so many tokens that decision-making would be centralized otherwise). It also explains how they choose the delegates, around 50% of their delegations are to University based organizations with the remainder to startups and non-profits.
 
 That's all we have for August. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
