--- a/journal/202108.md
+++ b/journal/202108.md
@@ -424,6 +424,12 @@ Some U.S. lawmakers got surprisingly selective about consensus algorithms and on
 
 A16Z, a VC with stakes in many crypto networks, has [published](https://a16z.com/2021/08/26/open-sourcing-our-token-delegate-program/) its "Token Delegate Program". The document explains why A16Z has decided to delegate its voting rights (they hold so many tokens that decision-making would be centralized otherwise). It also explains how they choose the delegates, around 50% of their delegations are to University based organizations with the remainder to startups and non-profits.
 
+NFT mania reached new heights with the [LOOT](https://techcrunch.com/2021/09/03/loot-games-the-crypto-world) (for adventurers) drop, images with white text describing adventure game items on a black background, which were soon selling for upwards of 10 ETH each. The idea behind LOOT is that once the range of items and their scarcity is determined initially then people will add all of the aspects usually associated with games (visual representation of the item, stats, a game world to use it in) afterwards. Little attention seems to have been given to incentivizing this work so far however, rather LOOT's main feature at this stage seems that it entitles the holder to receive a range of similarly vacuous airdrops. Are we moving past "build it and they will come", to "sell them some placeholders for a high price and someone is bound to show up and build it"?
+
+Also it looks like the LOOT drop was heavily [gamed](https://twitter.com/IAMTHETORN/status/1434401460876369923) by people with expert knowledge, who were able to guarantee rare items in their bags.
+
+A fake Banksy NFT was [sold](https://www.cnbc.com/2021/09/01/banksy-website-promotes-fake-nft-in-apparent-hack.html) for $300,000 after the graffiti artist's website was apparently hacked to add a page introducing this NFT and linking to its listing on Opensea. The scammer subsequently returned buyer's ETH for unstated reasons.
+
 That's all we have for August. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
 
