--- a/journal/202108.md
+++ b/journal/202108.md
@@ -214,19 +214,9 @@ Other:
 
 ## People
 
-{ hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
+Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [@vibros68](https://github.com/vibros68)!
 
-Welcome to new first time contributors with code merged to master: {@handle} ([{repo}]({link to user's commits})), ... ! {NONE THIS MONTH}
-
-Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [@vibros68](https://github.com/vibros68). { hint: check the CMS }
-
-{ welcome new corporate contractors with short intros, if any }
-
-{ updates from existing contractors }
-
-
-Raedah gave an interesting interview to authority magazine talking about a variety of topics, his life experience, and Decred. 
-- https://medium.com/authority-magazine/the-future-is-now-steven-wagner-of-raedah-group-on-how-their-technological-innovation-will-shake-4f272ced222f
+@raedah gave an interesting [interview](https://medium.com/authority-magazine/the-future-is-now-steven-wagner-of-raedah-group-on-how-their-technological-innovation-will-shake-4f272ced222f) to Authority Magazine talking about a variety of topics, his life experience, and Decred.
 
 Community stats as of Sep 1:
 
@@ -237,7 +227,7 @@ Community stats as of Sep 1:
 - [Telegram](https://t.me/Decred) users: 2,846 (+13)
 - [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,610 (+10), views: 194K (+3K)
 
-{ notable SM activity }
+{ maybe: notable SM activity }
 
 
 ## Governance
@@ -347,6 +337,7 @@ Selected articles:
 
 - https://www.businessinsider.com/profitable-crypto-to-mine-according-to-ceo-mining-farm-navier-2021-8
 - https://medium.com/@tacorevenge/the-suppressor-part-1-war-of-attrition-3081a61b202b
+- https://medium.com/authority-magazine/the-future-is-now-steven-wagner-of-raedah-group-on-how-their-technological-innovation-will-shake-4f272ced222f
 
 Videos:
 
