--- a/journal/202108.md
+++ b/journal/202108.md
@@ -251,33 +251,28 @@ See Politeia Digest [issue 46](https://blockcommons.red/politeia-digest/issue046
 
 ## Network
 
-{ section hint: use the same `zoom` parameter for all dcrdata links }
-
 **Hashrate**: August's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=krrqjgnz-kt1oo9gz&scale=linear&bin=block&axis=time) opened at ~316 Ph/s and closed ~360 Ph/s, bottoming at 164 Ph/s and peaking at 413 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Sep 1: Poolin 36%, F2Pool 29%, AntPool 16%, BTC.com 8%, Easy2Mine 5%, Luxor 3%, ViaBTC 1.6%, HuobiPool 1.3%, OKEx 0.14%, CoinMine 0.08%, UUPool 0.07%.
-
-{ hint: fallback link for pool distribution: https://dcrstats.com/pow }
-
-Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before {date}: {PoolName n%, ...}.
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Sep 1: Poolin 36%, F2Pool 29%, AntPool 16%, BTC.com 8%, Easy2Mine 5%, Luxor 3%, ViaBTC 1.6%, HuobiPool 1.3%, OKEx 0.14%, CoinMine 0.08%, UUPool 0.07%. The percentages are based on the 244 Ph/s attributed to known pools and do not include ~90 Ph/s from unknown miners. Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before Sep 1 mostly confirmed these numbers.
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=krrqjgnz-kt1oo9gz&axis=time&visibility=true-true&mode=stepped) varied between 120.1-321.6 DCR, with 30-day [average](https://dcrstats.com/) at 193.8 DCR (+3.1).
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=krrqjgnz-kt1oo9gz&scale=linear&bin=block&axis=time) was 7.23-8.12 million DCR, meaning that 54.5-61.1% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=krrqjgnz-kt1oo9gz&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-The ticket price went down to 120 DCR and shot up to an ATH of 321.6 DCR. The staking participation also reached a new ATH of 61.1%. 
+The ticket price [went down](https://www.reddit.com/r/decred/comments/p4drzc/whats_up_with_the_decred_ticket_price/) to 120 DCR and then shot up to a new all-time high of 321.6 DCR. The staking participation also reached a new ATH of 61.1%.
 
-**VSP**: On {}, {} (+{}) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and {} (-{}) by listed legacy dcrstakepool servers. Collectively the {} legacy and {} new VSPs managed {}% of the ticket pool.
+**VSP**: On Sep 1, ~8,100 (-500) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and ~250 (-150) by listed legacy dcrstakepool servers. Collectively the 11 legacy and 15 new VSPs managed 21% (-1.9%) of the ticket pool. Unlisted but still active legacy VSPs managed 40 live tickets.
 
 **Nodes**: Throughout August there were around 205 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
 Node versions as of Sep 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (252 dcrd nodes): v1.6.2 - 56%, v1.6.0 - 14%, v1.6.1 - 12%, v1.7 dev builds - 13%, v1.6 dev builds - 2.4%, v1.5.2 - 2%, v1.5.1 - 0.4%.
 
-{ maybe } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
-
-{ maybe } Decred's [Lightning Network](https://ln-map.jholdstock.uk/) has seen {} nodes (+{}), {} channels (+{}) with a total capacity of {n.n} DCR (+{n.n}), as of {date}.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jyefppu5-kub1inpe&bin=day&axis=time&visibility=true-true-true) varied between 46.1-50.5% and made a new ATH. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=krmqf4vr-kt3wbm67&bin=day&axis=time) varied between 200-786K DCR and also set a new record.
 
 { any interesting analysis or events in the network }
+
+- https://twitter.com/TheBochinchero/status/1433834350353784875
+- https://twitter.com/lukebp_/status/1427980967789187076
 
 
 ## Ecosystem
