--- a/journal/202108.md
+++ b/journal/202108.md
@@ -281,10 +281,10 @@ Welcome the [new](https://github.com/decred/dcrwebapi/pull/147) VSP at [synergy-
 
 The following legacy VSP have been removed from public [listing](https://decred.org/vsp/):
 
-- [dcr.farm](https://dcr.farm) - its legacy page has been redirecting to [vspd page](https://vsp.dcr.farm/) since June (when it [had](https://github.com/decred/dcrwebapi/issues/146#issuecomment-865451784) 32 live tickets)
-- [stakey.net](https://stakey.net) - the page shows stats of the new vspd instance now, but its [legacy API](https://stakey.net/api/v2/stats) is still up and reports how many live tickets remain (38 as of Sep 1)
+- [dcr.farm](https://dcr.farm) - its legacy page has been redirecting to [vspd](https://vsp.dcr.farm/) since June (when it [had](https://github.com/decred/dcrwebapi/issues/146#issuecomment-865451784) 32 live tickets)
+- [stakey.net](https://stakey.net) - the page has been replaced with vspd UI, but its [legacy API](https://stakey.net/api/v2/stats) is still up and reports how many live tickets remain (38 as of Sep 1)
 
-raqamiya.net has shut down its legacy VSP. In March it was [delisted](https://github.com/decred/dcrwebapi/pull/132) and users were notified via email, website, and [March DJ](202103.md#integrations) about the upcoming shutdown. Raqamiya then continued to vote tickets for ~4 months before closing. Unfortunately, a few users missed all notices and continued assigning tickets to this VSP, resulting in 11 live tickets at the moment of shutdown. This can happen with any legacy VSP because [dcrstakepool](https://github.com/decred/dcrstakepool) has no way to prevent users from buying tickets to it (unlike the new vspd protocol).
+raqamiya.net has shut down its legacy VSP. Closing procedure started in March when it was [delisted](https://github.com/decred/dcrwebapi/pull/132) and users were notified via email, website, and [March DJ](202103.md#integrations) to not buy any new tickets. Raqamiya then continued to vote tickets for ~4 months before closing on Aug 16. A few users missed all notices and kept assigning tickets to this VSP until the end, resulting in 11 live tickets at the moment of shutdown. This can happen with any legacy VSP because [dcrstakepool](https://github.com/decred/dcrstakepool) has no way to reject ticket registrations (unlike the new vspd protocol).
 
 For anyone still using legacy VSP it is recommended to switch to vspd providers to avoid the risk of missed tickets, e.g. as a result of shutting down or if dcrstakepool stops working with the upcoming consensus upgrades. As of Sep 1, legacy VSPs managed less than 300 tickets, or 0.7% of the ticket pool.
 
@@ -293,7 +293,7 @@ New exchange integrations:
 - Bitfinex [launched](https://twitter.com/bitfinex/status/1423210403774009345) DCR/USD trading
 - Bitcoin.com Exchange [enabled](https://twitter.com/BitcoinComExch/status/1423589830672457733) DCR trading with BTC, ETH and USDT
 
-@DecredKorea [reported](https://twitter.com/DecredKorea/status/1425751145796956167) that Hotbit Korea has delisted its DCR/KRW pair.
+Hotbit Korea has delisted its DCR/KRW pair, as [reported](https://twitter.com/DecredKorea/status/1425751145796956167) by @DecredKorea (the pair went live in [Nov 2020](https://twitter.com/Hotbit_Korea/status/1331412789416534017)).
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
