--- a/journal/202108.md
+++ b/journal/202108.md
@@ -312,17 +312,13 @@ Decred became a supporter of an educational program about crypto and blockchain 
 
 ## Media
 
-{ notable community efforts }
-
-{ ratings news }
-
-{ hint: use the following format: (title in Sentence case) by (author) ([domain](link)) - (optional comment) }
-
 Selected articles:
 
-- https://www.businessinsider.com/profitable-crypto-to-mine-according-to-ceo-mining-farm-navier-2021-8
-- https://medium.com/@tacorevenge/the-suppressor-part-1-war-of-attrition-3081a61b202b
-- https://medium.com/authority-magazine/the-future-is-now-steven-wagner-of-raedah-group-on-how-their-technological-innovation-will-shake-4f272ced222f
+- The Suppressor part 1: War of attrition ([medium](https://medium.com/@tacorevenge/the-suppressor-part-1-war-of-attrition-3081a61b202b))
+- The future is now: Steven Wagner of Raedah Group on how their technological innovation will shake up the tech scene by Fotis Georgiadis ([medium](https://medium.com/authority-magazine/the-future-is-now-steven-wagner-of-raedah-group-on-how-their-technological-innovation-will-shake-4f272ced222f))
+- One of the most profitable cryptos to mine is one you may have never heard of, and it's up 1,300% from its 2020 low. Mining-farm CEO Josh Metnick explains the crypto, and which miners and pools to use. by Laila Maidan ([businessinsider.com](https://www.businessinsider.com/profitable-crypto-to-mine-according-to-ceo-mining-farm-navier-2021-8), paywalled ([kind of](https://twitter.com/exitusdcr/status/1429414135582937088))
+
+> "It's a highly legitimate project. Relatively speaking, like in crypto years, it's been around for a while. And there are some smart, ethical people involved in it," Metnick said.
 
 Videos:
 
@@ -373,6 +369,8 @@ In August DCR was trading between USD 126.5-181.26 / BTC 0.003208-0.003807. The 
 Dcrdata now lists [trading](https://explorer.dcrdata.org/market?chart=candlestick&xc=dcrdex&bin=1h) and [volume](https://explorer.dcrdata.org/market?chart=depth&xc=dcrdex&bin=1h) data for the BTC/DCR pair in the DCRDEX.
 
 https://www.reddit.com/r/decred/comments/pggfku/weekly_trader_talk_thursday/hbb16ki/
+
+https://medium.com/@tacorevenge/the-suppressor-part-1-war-of-attrition-3081a61b202b
 
 
 ## Relevant External
