--- a/journal/202108.md
+++ b/journal/202108.md
@@ -8,6 +8,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 - Politeia v1.1.0 release
 - again solid dev progress in multiple projects
+- new on-chain ATHs
 
 }
 
@@ -220,7 +221,7 @@ Congratulations to new contractors granted the Decred Contractor Clearance (DCC)
 
 @raedah gave an interesting [interview](https://medium.com/authority-magazine/the-future-is-now-steven-wagner-of-raedah-group-on-how-their-technological-innovation-will-shake-4f272ced222f) to Authority Magazine talking about a variety of topics, his life experience, and Decred.
 
-Check [Media](#media) section for 2 other interviews with community members.
+Check [Media](#media) section for other new interviews with Decred community members.
 
 Community stats as of Sep 1:
 
@@ -271,12 +272,9 @@ The ticket price [went down](https://www.reddit.com/r/decred/comments/p4drzc/wha
 
 Node versions as of Sep 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (252 dcrd nodes): v1.6.2 - 56%, v1.6.0 - 14%, v1.6.1 - 12%, v1.7 dev builds - 13%, v1.6 dev builds - 2.4%, v1.5.2 - 2%, v1.5.1 - 0.4%.
 
-The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jyefppu5-kub1inpe&bin=day&axis=time&visibility=true-true-true) varied between 46.1-50.5% and made a new ATH. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=krmqf4vr-kt3wbm67&bin=day&axis=time) varied between 200-786K DCR and also set a new record.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jyefppu5-kub1inpe&bin=day&axis=time&visibility=true-true-true) varied between 46.1-50.5% and made a [new ATH](https://twitter.com/lukebp_/status/1427980967789187076). Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom=krmqf4vr-kt3wbm67&bin=day&axis=time) varied between 200-786K DCR and also set a new record.
 
-{ any interesting analysis or events in the network }
-
-- https://twitter.com/TheBochinchero/status/1433834350353784875
-- https://twitter.com/lukebp_/status/1427980967789187076
+Many new ATHs have been nicely summarized in @bochinchero's latest on-chain metrics [thread](https://twitter.com/TheBochinchero/status/1433834350353784875).
 
 
 ## Ecosystem
@@ -350,14 +348,13 @@ If you have translations we don't know about please share in our [#translations]
 
 In August DCR was trading between USD 126.50-181.26 / BTC 0.0032-0.0038. The average daily rate was $161.24.
 
-dcrdata now shows [price](https://explorer.dcrdata.org/market?chart=candlestick&xc=dcrdex&bin=1d) and trading [volume](https://explorer.dcrdata.org/market?chart=volume&xc=dcrdex&bin=1d) history for the BTC/DCR pair at DCRDEX.
+dcrdata now [shows](https://twitter.com/longtermdaily/status/1433148588608004097) [price](https://explorer.dcrdata.org/market?chart=candlestick&xc=dcrdex&bin=1d) and trading [volume](https://explorer.dcrdata.org/market?chart=volume&xc=dcrdex&bin=1d) history for the BTC/DCR pair at DCRDEX.
 
 { Decred Markets shot }
 
-https://www.reddit.com/r/decred/comments/pggfku/weekly_trader_talk_thursday/hbb16ki/
+A new mysterious contributor @tacorevenge published the [first part](https://medium.com/@tacorevenge/the-suppressor-part-1-war-of-attrition-3081a61b202b) of an investigation of The Suppressor entity that some community members suspect of manipulating DCR markets.
 
-https://medium.com/@tacorevenge/the-suppressor-part-1-war-of-attrition-3081a61b202b
-
+{ maybe best ts image }
 
 ## Relevant External
 
