--- a/journal/202108.md
+++ b/journal/202108.md
@@ -394,7 +394,7 @@ Most information from third parties is relayed directly from source after a mini
 
 Credits (alphabetical order):
 
-- writing and editing: {}
-- reviews and feedback: davecgh, lukebp
+- writing and editing: bee, degeri, richardred
+- reviews and feedback: davecgh, l1ndseymm, lukebp
 - title image: {}
 - funding: Decred stakeholders
