drop some todos

--- a/journal/202108.md
+++ b/journal/202108.md
@@ -12,7 +12,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 }
 
-Contents: { sync }
+Contents:
 
 - [Development](#development)
 - [People](#people)
@@ -22,7 +22,6 @@ Contents: { sync }
 - [Outreach](#outreach)
 - [Events](#events)
 - [Media](#media)
-- [Discussions](#discussions)
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
 
@@ -55,8 +54,6 @@ Other merged work:
 <a id="dcrwallet" />
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
-
-{ are JSON-RPC API additions/changes automatically propagated to `dcrctl` CLI? }
 
 - added mixing and VSP support to [`purchaseticket`](https://github.com/decred/dcrwallet/pull/2064) JSON-RPC request
 - added [`processunmanagedticket`](https://github.com/decred/dcrwallet/pull/2075) JSON-RPC request to assign an existing ticket to the VSP configured in user's config file
@@ -123,7 +120,7 @@ Backend, internal, and command-line changes:
 
 - updated to [latest](https://github.com/decred/dcrlnd/pull/138) dcrd and dcrwallet
 - added a [script](https://github.com/decred/dcrlnd/pull/139) to generate a simulation network for testing
-- added [SPV support](https://github.com/decred/dcrlnd/pull/140) in embedded wallet mode { how big is this? }
+- added [SPV support](https://github.com/decred/dcrlnd/pull/140) in embedded wallet mode
 
 <a id="dcrdex" />
 
@@ -232,8 +229,6 @@ Community stats as of Sep 1:
 - [Telegram](https://t.me/Decred) users: 2,846 (+13)
 - [YouTube](https://www.youtube.com/decredchannel) subscribers: 4,610 (+10), views: 194K (+3K)
 
-{ maybe: notable SM activity }
-
 
 ## Governance
 
@@ -334,7 +329,8 @@ Videos:
 
 Decred was mentioned by Chris Burniske in the "Original Sins of Crypto" [video](https://www.youtube.com/watch?v=gLbzfZKf_ro&t=1h05m42s) by Jason Yanowitz of Blockworks:
 
-> Jason: How do you trust though... Like, everyone is democratic, until they get power and then power corrupts. I love the concept of a DAO and I love the concept of DeFi but my biggest concern is are we just trusting these "DeFi DAO CEOs" that they'll decentralize and give away power?  
+> Jason: How do you trust though... Like, everyone is democratic, until they get power and then power corrupts. I love the concept of a DAO and I love the concept of DeFi but my biggest concern is are we just trusting these "DeFi DAO CEOs" that they'll decentralize and give away power?
+> 
 > Chris: It really depends on the genesis of the DAO. Not all DAOs are equal. This is where for me the gold standard of how a DAO was started is still Decred.
 
 Translations:
@@ -359,19 +355,7 @@ A new mysterious contributor @tacorevenge published the [first part](https://med
 
 ## Relevant External
 
-{ cc tech: PoW, ASIC resistance, full nodes, cc network security, etc }
-
-{ governance, funding, chain forks, community splits }
-
-{ DEX }
-
-{ relevant exchanges and websites }
-
-{ other: regulations, privacy, security, fun }
-
 Some U.S. lawmakers got surprisingly selective about consensus algorithms and only excluded [proof-of-work mining](https://news.bitcoin.com/white-house-backs-crypto-tax-amendment-endorsing-proof-of-work-infrastructure-bill/) from the definition of "brokers" - which includes "any person who (for consideration) is responsible for and regularly provides any service effectuating transfers of digital assets". This broad definition has been [criticized](https://twitter.com/jchervinsky/status/1421150347788263433) as potentially applying to virtually every economic actor in the industry, and became the subject of a crypto lobbying effort to replace that language with some that is more specific and explicitly excludes all validators and software developers. There was a version of the bill which had support from a number of Senators which would have tightened the language up in this way, but due to Senate procedure no amendments were considered and the bill with the broad definition was [passed](https://www.coindesk.com/markets/2021/08/10/us-senate-sends-infrastructure-bill-to-house/) on to the House of Representatives. 
-
-{ stablecoins at risk? https://twitter.com/lukebp_/status/1422549683025678350 }
 
 A16Z, a VC with stakes in many crypto networks, has [published](https://a16z.com/2021/08/26/open-sourcing-our-token-delegate-program/) its "Token Delegate Program". The document explains why A16Z has decided to delegate its voting rights (they hold so many tokens that decision-making would be centralized otherwise). It also explains how they choose the delegates, around 50% of their delegations are to University based organizations with the remainder to startups and non-profits.
 
