--- a/journal/202108.md
+++ b/journal/202108.md
@@ -8,7 +8,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 - Politeia v1.1.0 release
 - again solid dev progress in multiple projects (still thinking which to highlight and how)
-- new on-chain ATHs
+- The ticket price finally set a new all time high of 321, which even surpassed the spikes in Decred's history, clearing the way to refer to new ticket price ATHs without any qualification about the early spikes in price.
 
 }
 
@@ -34,7 +34,7 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 **[dcrd](https://github.com/decred/dcrd)**
 
-Implementation of the [Revert Treasury Expenditure Policy](https://github.com/decred/dcps/blob/master/dcp-0007/dcp-0007.mediawiki) consensus change (DCP-7) has been [merged](https://github.com/decred/dcrd/pull/2680) (following some [preparations](https://github.com/decred/dcrd/pull/2679) to make the it easier to review). If the vote passes, spend limit will be based on treasury's historical income and not its historical spends, which in turn unlocks the ability to use the new decentralized treasury.
+Implementation of the [Revert Treasury Expenditure Policy](https://github.com/decred/dcps/blob/master/dcp-0007/dcp-0007.mediawiki) consensus change (DCP-7) has been [merged](https://github.com/decred/dcrd/pull/2680) (following some [preparations](https://github.com/decred/dcrd/pull/2679) to make it easier to review). If the vote passes, spend limit will be based on treasury's historical income and not its historical spends, which in turn unlocks the ability to use the new decentralized treasury.
 
 Merged work towards the [Automatic Ticket Revocations](https://github.com/decred/dcps/blob/master/dcp-0009/dcp-0009.mediawiki) consensus change (DCP-9):
 
@@ -362,7 +362,7 @@ Some U.S. lawmakers got surprisingly selective about consensus algorithms and on
 
 A16Z, a VC with stakes in many crypto networks, has [published](https://a16z.com/2021/08/26/open-sourcing-our-token-delegate-program/) its "Token Delegate Program". The document explains why A16Z has decided to delegate its voting rights (they hold so many tokens that decision-making would be centralized otherwise). It also explains how they choose the delegates, around 50% of their delegations are to University based organizations with the remainder to startups and non-profits.
 
-A Uniswap proposal from Flipside crypto caused some [controversy](https://twitter.com/DuneAnalytics/status/1428250340139356164) in the community as it breezed through early rounds of voting, it would have used $25M worth of UNI to generate yield that paid the Flipside team to produce "community-enabled analytics". One of the issues raised was that the entities named to oversee the grant included people who would benefit from it. All of the other providers of analytics were unimpressed by the attempt to get UNI top fund 8 full time employees for Flipside. { swap "top" and "fund"? }
+A Uniswap proposal from Flipside crypto caused some [controversy](https://twitter.com/DuneAnalytics/status/1428250340139356164) in the community as it breezed through early rounds of voting, it would have used $25M worth of UNI to generate yield that paid the Flipside team to produce "community-enabled analytics". One of the issues raised was that the entities named to oversee the grant included people who would benefit from it. All of the other providers of analytics were unimpressed by Flipside's attempt to get UNI to fund 8 full time employees for their company. 
 
 NFT mania reached new heights with the [LOOT](https://techcrunch.com/2021/09/03/loot-games-the-crypto-world) (for adventurers) drop, images with white text describing adventure game items on a black background, which were soon selling for upwards of 10 ETH each. The idea behind LOOT is that once the range of items and their scarcity is determined initially then people will add all of the aspects usually associated with games (visual representation of the item, stats, a _game world_ to use it in) afterwards. Little attention seems to have been given to incentivizing this work so far however, rather LOOT's main feature at this stage seems that it entitles the holder to receive a range of similarly vacuous airdrops. Are we moving past "build it and they will come", to "sell them some placeholders for a high price and someone is bound to show up and build it"?
 
