use title image

--- a/journal/202108.md
+++ b/journal/202108.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – August 2021
 
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
+![abstract art by @saender](../img/202108.1.github.png)
 
-_Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
+_Image: Transmutive State by @saender_
 
 - Politeia v1.1.0 has been released and deployed to the proposals site, it adds new features, including expanded metadata and enhanced UI.
 - The ticket price finally set a new all time high of 321, which even surpassed the spikes in Decred's history, clearing the way to refer to new ticket price ATHs without any qualification about the early spikes in price.
@@ -379,5 +379,5 @@ Credits (alphabetical order):
 
 - writing and editing: bee, degeri, richardred
 - reviews and feedback: davecgh, l1ndseymm, lukebp
-- title image: {}
+- title image: saender
 - funding: Decred stakeholders
