--- a/journal/202108.md
+++ b/journal/202108.md
@@ -4,9 +4,9 @@
 
 _Image: {"$title by $author. $optional-description" for artwork, "$description" for photos}_
 
-- Politeia v1.1.0 has been released and deployed to the proposals site, it adds many new features, including proposal reporting and expanded metadata.
+- Politeia v1.1.0 has been released and deployed to the proposals site, it adds new features, including expanded metadata and enhanced UI.
 - The ticket price finally set a new all time high of 321, which even surpassed the spikes in Decred's history, clearing the way to refer to new ticket price ATHs without any qualification about the early spikes in price.
-- Solid progress on a range of Decred software repositories, including progress on 3 different DCPs (7, 8 & 9) and for DCRDEX the solidity contract for ETH trading is under review on testnet.
+- Solid progress on a range of Decred software repositories, including progress on 3 different DCPs (7, 8 & 9) and for DCRDEX the Solidity contract for ETH trading is under review on testnet.
 
 Contents:
 
