--- a/journal/202108.md
+++ b/journal/202108.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – August 2021
+# Decred Journal – August 2021
 
 ![abstract art by @saender](../img/202108.1.github.png)
 
@@ -364,11 +364,11 @@ _Odd high-volume selling_
 
 ## Relevant External
 
-Some U.S. lawmakers got surprisingly selective about consensus algorithms and only excluded [proof-of-work mining](https://news.bitcoin.com/white-house-backs-crypto-tax-amendment-endorsing-proof-of-work-infrastructure-bill/) from the definition of "brokers" - which includes "any person who (for consideration) is responsible for and regularly provides any service effectuating transfers of digital assets". This broad definition has been [criticized](https://twitter.com/jchervinsky/status/1421150347788263433) as potentially applying to virtually every economic actor in the industry, and became the subject of a crypto lobbying effort to replace that language with some that is more specific and explicitly excludes all validators and software developers. There was a version of the bill which had support from a number of Senators which would have tightened the language up in this way, but due to Senate procedure no amendments were considered and the bill with the broad definition was [passed](https://www.coindesk.com/markets/2021/08/10/us-senate-sends-infrastructure-bill-to-house/) on to the House of Representatives. 
+Some U.S. lawmakers got surprisingly selective about consensus algorithms and only excluded [proof-of-work mining](https://news.bitcoin.com/white-house-backs-crypto-tax-amendment-endorsing-proof-of-work-infrastructure-bill/) from the definition of "brokers" - which includes "any person who (for consideration) is responsible for and regularly provides any service effectuating transfers of digital assets". This broad definition has been [criticized](https://twitter.com/jchervinsky/status/1421150347788263433) as potentially applying to virtually every economic actor in the industry, and became the subject of a crypto lobbying effort to replace that language with some that is more specific and explicitly excludes all validators and software developers. There was a version of the bill which had support from a number of Senators which would have tightened the language up in this way, but due to Senate procedure no amendments were considered and the bill with the broad definition was [passed](https://www.coindesk.com/markets/2021/08/10/us-senate-sends-infrastructure-bill-to-house/) on to the House of Representatives.
 
 A16Z, a VC with stakes in many crypto networks, has [published](https://a16z.com/2021/08/26/open-sourcing-our-token-delegate-program/) its "Token Delegate Program". The document explains why A16Z has decided to delegate its voting rights (they hold so many tokens that decision-making would be centralized otherwise). It also explains how they choose the delegates, around 50% of their delegations are to University based organizations with the remainder to startups and non-profits.
 
-A Uniswap proposal from Flipside crypto caused some [controversy](https://twitter.com/DuneAnalytics/status/1428250340139356164) in the community as it breezed through early rounds of voting, it would have used $25M worth of UNI to generate yield that paid the Flipside team to produce "community-enabled analytics". One of the issues raised was that the entities named to oversee the grant included people who would benefit from it. All of the other providers of analytics were unimpressed by Flipside's attempt to get UNI to fund 8 full time employees for their company. 
+A Uniswap proposal from Flipside crypto caused some [controversy](https://twitter.com/DuneAnalytics/status/1428250340139356164) in the community as it breezed through early rounds of voting, it would have used $25M worth of UNI to generate yield that paid the Flipside team to produce "community-enabled analytics". One of the issues raised was that the entities named to oversee the grant included people who would benefit from it. All of the other providers of analytics were unimpressed by Flipside's attempt to get UNI to fund 8 full time employees for their company.
 
 NFT mania reached new heights with the [LOOT](https://techcrunch.com/2021/09/03/loot-games-the-crypto-world) (for adventurers) drop, images with white text describing adventure game items on a black background, which were soon selling for upwards of 10 ETH each. The idea behind LOOT is that once the range of items and their scarcity is determined initially then people will add all of the aspects usually associated with games (visual representation of the item, stats, a _game world_ to use it in) afterward. Little attention seems to have been given to incentivizing this work so far however, rather LOOT's main feature at this stage seems that it entitles the holder to receive a range of similarly vacuous airdrops. Are we moving past "build it and they will come", to "sell them some placeholders for a high price and someone is bound to show up and build it"?
 
