--- a/journal/202109.md
+++ b/journal/202109.md
@@ -31,7 +31,7 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 **[dcrd](https://github.com/decred/dcrd)**
 
-- {}
+- https://matrix.to/#/!qYpAAClAYrHaUIGkLs:decred.org/$gEk4clvm_x6Nr6fzFaQCYp4iBSTozoJ8C5XV61JB2BQ
 
 <a id="dcrwallet" />
 
@@ -97,7 +97,7 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
-- {}
+- https://github.com/planetdecred/dcrandroid/issues/350 { hashes and sigs! }
 
 { also check the base library https://github.com/planetdecred/dcrlibwallet }
 
@@ -112,6 +112,8 @@ The work reported below has the "merged to master" status unless noted otherwise
 **[godcr](https://github.com/planetdecred/godcr)**
 
 - {}
+
+{ shot of new UI stuff }
 
 <a id="dcrdata" />
 
@@ -247,6 +249,8 @@ Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) (
 
 { check https://github.com/decred/dcrweb/commits/master to detect added/removed services }
 
+{ Upgrade your Matrix clients, review devices and remove the ones you no longer use or recognize, https://matrix.org/blog/2021/09/13/vulnerability-disclosure-key-sharing/ }
+
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
 
@@ -278,7 +282,7 @@ Upcoming:
 
 Selected articles:
 
-- {}
+- https://coinmarketcap.com/alexandria/article/a-deep-dive-into-how-the-top-daos-work
 
 Videos:
 
@@ -338,6 +342,18 @@ In September DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}
 { relevant exchanges and websites }
 
 { other: regulations, privacy, security, fun }
+
+{ Coinbase hack https://www.zdnet.com/article/coinbase-sends-out-breach-notification-letters-after-6000-accounts-had-funds-stolen/ }
+
+{ Did this get any legs?
+
+- https://twitter.com/lukebp_/status/1422549683025678350
+- https://twitter.com/lex_node/status/1420959286306422790
+- https://nulltx.com/nugenesis-comprehensive-2-part-review-of-proposed-amendment-of-the-federal-reserve-act-part-1/
+- https://nulltx.com/nugenesis-comprehensive-2-part-review-of-proposed-amendment-of-the-federal-reserve-act-part-2/
+- the interest for DCR here is what it says on privacy/mixing, and stablecoins that DCRDEX plans to add
+
+}
 
 That's all for September. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
