--- a/journal/202109.md
+++ b/journal/202109.md
@@ -193,12 +193,16 @@ Community stats as of {date}:
 
 ## Governance
 
-In September the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at month's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at September's rate, or ${} at August's billing rate of ${}. As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and new treasury is {n} DCR ({n} million USD at ${n.nn}).
+In September the new [treasury](https://dcrdata.decred.org/treasury) received 10,274 DCR worth $1.4M at September's average rate of $139.56. 590 DCR was spent to pay contractors, worth $82K at September's rate, or $95K at August's billing rate of $161.24. As of Oct 2, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and new treasury is 723,528 DCR (83.5 million USD at $115.45).
 
-{ check the legacy treasury for any activity }
+{ check the legacy treasury for any activity. 18 DCR received, looks like change }
 
 { high level recap of decision-making activity and most important events }
 
+Two new proposals were submitted, both from @raedah, for renewed funding for [GoDCR](https://proposals.decred.org/record/f7d9fc8) and [Mobile Wallets](https://proposals.decred.org/record/6db3c4e).
+
+- The PR [proposal](https://proposals.decred.org/record/58d9f46) from Monde was approved with 97.5% approval and turnout of 75%.
+- The [proposal](https://proposals.decred.org/record/150cf81) to fund an educational video series for the Indian market, from @finstreet21, was rejected with 45% approval and turnout of 77%.
 - {}
 
 { check https://github.com/decredcommunity/proposals/commits/master for updates }
