--- a/journal/202109.md
+++ b/journal/202109.md
@@ -168,7 +168,7 @@ Other:
 
 { hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
 
-Welcome to new first time contributors with code merged to master: {@handle} ([{repo}]({link to user's commits})), ... !
+Welcome to new first time contributors with code merged to master: @naveensrinivasan ([dcrd](https://github.com/decred/dcrd/commits?author=naveensrinivasan)).
 
 Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
 
