--- a/journal/202109.md
+++ b/journal/202109.md
@@ -223,11 +223,11 @@ Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by th
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) before {date}: {PoolName n%, ...}.
 
-**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom={t1}-{t2}&axis=time&visibility=true-true&mode=stepped) varied between {n.n}-{n.n} DCR, with 30-day [average](https://dcrstats.com/) at {n.n} DCR (+{n.n}). { use same t1-t2 for zoom }
+**Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=kszlo86g-ku72gu79&axis=time&visibility=true-true&mode=stepped) varied between 192.8-210.8 DCR, with 30-day [average](https://dcrstats.com/) at 199.40 DCR (+5.6).
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) was {n.nn}-{n.nn} million DCR, meaning that {n.n}-{n.n}% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) in proof-of-stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=kszlo86g-ku72gu79&scale=linear&bin=block&axis=time) was 7.69-8.16 million DCR, meaning that 57.7-61.05% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=kszlo86g-ku72gu79&scale=linear&bin=block&axis=time) in proof-of-stake.
 
-{ recap of ticket price action if it was interesting }
+Ticket prices seem to have hit a relative plateau between two extremes. 
 
 **VSP**: On {}, {} (+{}) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and {} (-{}) by listed legacy dcrstakepool servers. Collectively the {} legacy and {} new VSPs managed {}% of the ticket pool.
 
