--- a/journal/202109.md
+++ b/journal/202109.md
@@ -203,7 +203,7 @@ Two new proposals were submitted, both by @raedah, requesting renewed funding fo
 
 Voter participation reached new heights, with both of the votes this month seeing turnout above the previous record level.
 
-- The PR [proposal](https://proposals.decred.org/record/58d9f46) from Monde was approved with 97.5% approval and turnout of 75%.
+- The PR [proposal](https://proposals.decred.org/record/58d9f46) from Monde was approved with 97.5% approval and a turnout of 75%.
 - The [proposal](https://proposals.decred.org/record/150cf81) to fund an educational video series for the Indian market, from @finstreet21, was rejected with 45% approval and turnout of 77%.
 
 { check https://github.com/decredcommunity/proposals/commits/master for updates }
