--- a/journal/202109.md
+++ b/journal/202109.md
@@ -65,13 +65,14 @@ Other merged work:
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
-- {}
-
-<a id="dcrctl" />
-
-**[dcrctl](https://github.com/decred/dcrctl)**
-
-- {}
+- added config option for max [log size](https://github.com/decred/dcrwallet/pull/2077) before it is rotated
+- code upgraded to [Go 1.16](https://github.com/decred/dcrwallet/pull/2085) and latest [dcrd](https://github.com/decred/dcrwallet/pull/2087) modules
+- allow [processing](https://github.com/decred/dcrwallet/pull/2058) VSP fees for already bought tickets when the ticketbuyer is off
+- changed the default `ticketbuyer` [limit](https://github.com/decred/dcrwallet/pull/2086) to 1 max tickets per block
+- allow to [disable](https://github.com/decred/dcrwallet/pull/2088) account discovery (allows to optimize clients that don't need it such as dcrlnd)
+- fixed some issues with processing and confirming [VSP-managed tickets](https://github.com/decred/dcrwallet/pull/2083)
+- fixed [fee calculation](https://github.com/decred/dcrwallet/pull/2057) for multisig transactions
+- fixed a potential [race](https://github.com/decred/dcrwallet/pull/2089) issue in SPV mode
 
 <a id="decrediton" />
 
